--- a/website1/index.html
+++ b/website1/index.html
@@ -63,33 +63,92 @@
     </div>
     <div class="section">
         <div class="container">
-        <h2>Gallery</h2>
+            <div>
+                <h2>Gallery</h2>
+
+            </div>
 
             <div class="col col-3"> 
-                <img src="https://dummyimage.com/600x400/000/fff" alt="">
+                <img src="https://dummyimage.com/600x400/000/fff&text=IMAGE1" alt="">
             </div>
             <div class="col col-3"> 
-                <img src="https://dummyimage.com/600x400/ff00/fff" alt="">
+                <img src="https://dummyimage.com/600x400/ff00/fff&text=IMAGE2" alt="">
             </div>
             <div class="col col-3"> 
-                <img src="https://dummyimage.com/600x400/0ff0/fff" alt="">
+                <img src="https://dummyimage.com/600x400/0ff0/fff&text=IMAGE3" alt="">
             </div>
+
+            <div class="col col-3"> 
+                <img src="https://dummyimage.com/600x400/000/fff&text=IMAGE4" alt="">
+            </div>
+            <div class="col col-3"> 
+                <img src="https://dummyimage.com/600x400/ff00/fff&text=IMAGE5" alt="">
+            </div>
+            <div class="col col-3"> 
+                <img src="https://dummyimage.com/600x400/0ff0/fff&text=IMAGE6" alt="">
+            </div>
+
+
+
         </div>
 
         </div>
     </div>
 
     <div class="section">
-        <h1>Content 1</h1>
+        <div class="container">
+            <div>
+                <h2>About</h2>
+            </div>            
+            <div class="col col-2">
+                <div class="box">
+                    <header>Title</header>
+                    <div class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem a at perspiciatis, voluptates dolorum neque natus modi pariatur cumque quae inventore nemo rem eveniet fuga corporis corrupti nulla eos doloremque!</div>
+                    <footer>Footer more info </footer>
+                </div>
+                
+            </div>
+            
+            <div class="col col-2">
+                <div class="box">
+                    <header>Title</header>
+                    <div class="content">Hello World Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, repellat nobis aspernatur eius ex quidem consequuntur totam aliquam saepe mollitia quos, recusandae expedita animi obcaecati! Veniam iusto quisquam eum in?</div>
+                    <footer>Footer more info </footer>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="section">
-        <h1>Content 2</h1>
+        <div class="container">
+            <div>
+                <h2>About</h2>
+            </div>          
+
+            <div class="col col-1">
+                <div class="box">
+                    <header>Title</header>
+                    <div class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam modi, maxime error non voluptatibus quibusdam voluptates repudiandae. Vel aliquam magnam totam accusantium. Ab voluptatum doloribus magni minus dolor rerum officiis?
+                    Eum, mollitia! Iusto accusantium architecto explicabo rerum soluta, cumque id dolor, optio provident saepe, culpa exercitationem quam. Aspernatur ad aut veniam. Iure cupiditate nobis similique magnam qui aliquid tempore porro!
+                    Illum, quo. Error excepturi est quaerat doloribus sit nam quo. Quidem voluptate minima porro excepturi adipisci! Architecto nobis officiis omnis voluptas beatae quod voluptatum? Delectus, nobis? Corporis provident quaerat corrupti?
+                    Cum autem, impedit laboriosam ut quis ipsa temporibus. Possimus quis delectus, explicabo, voluptatem assumenda et cupiditate nisi suscipit neque est sed id quisquam harum perferendis aspernatur rerum quidem, tenetur recusandae.
+                    Reprehenderit asperiores vel, saepe quae provident, explicabo ea quibusdam quod repudiandae deleniti libero quo voluptas corrupti? Voluptate consequuntur repellendus maiores quibusdam, culpa vitae nesciunt necessitatibus veniam. Aliquid porro molestias dicta! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam molestias ab earum sapiente asperiores quisquam, saepe inventore totam debitis, sequi quia hic officia quas facere perferendis iste aut ratione laborum?Quas harum voluptate facere ad voluptas! Officiis nisi maxime adipisci quidem, voluptates eligendi soluta molestiae? Ipsa, molestias. Optio adipisci labore, odit, excepturi facere ut, hic nostrum harum repellendus amet ducimus. Hello World</div>
+                    <footer>Footer more info</footer>    
+
+                </div>
+            </div>
+
+        </div>
     </div>
 
 
     <footer>
-        <h1>footer</h1>
+        <div class="container">
+            <div>
+                <h2>About</h2>
+            </div>
+
+        </div>
     </footer>
 
 
